--- a/index.html
+++ b/index.html
@@ -25,7 +25,99 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    
+
+<header>
+    <div class="section header" id="header">
+        <div class="row">
+            <div class="container">
+                <a class="nav-logo" href="/">
+                    <img class="logo" src="/assets/logo/logo.svg" alt="Always Better Logo">
+                </a>
+                <nav>
+                    <a class="nav" href="#daypacks">
+                        Kies je daypacks
+                    </a>
+                    <a class="nav" href="#meals">
+                        Voedingsbegeleiding
+                    </a>
+                    <a class="nav" href="#faq">
+                        Veelgestelde vragen
+                    </a>
+                </nav>
+                <a href="/contact" class="btn">
+                    Contact
+                </a>
+            </div>
+        </div>
+
+        <div class="topnav-content-sm">
+            <div class="header-col">
+                <a href="/">
+                    <img class="logo" src="/assets/logo/logo.svg" alt="Always Better Logo">
+                </a>
+            </div>
+            <div class="header-col">
+                <a class="icon" id="menu-toggle">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+                </a>
+            </div>
+        </div>
+        <div class="small-menu-wrapper">
+            <div class="small-menu-content">
+                <a class="nav" href="#daypacks">
+                    Kies je daypacks
+                </a>
+                <a class="nav" href="#meals">
+                    Voedingsbegeleiding
+                </a>
+                <a class="nav" href="#faq">
+                    Veelgestelde vragen
+                </a>
+                <a href="/contact" class="btn">
+                    Contact
+                </a>
+            </div>
+        </div>
+
+    </div>
+</header>
+
+<div class="section banner">
+    <div class="row flex-col align-start">
+        <h1>
+            Always Better Media
+        </h1>
+        <p>
+            Dé kennishub die jou als ondernemer
+            <br>
+            helpt fysiek en mentaal optimaal te presteren.
+        </p>
+    </div>
+    <div class="overlay"></div>
+</div>
+
+<div class="section filter">
+    <div class="row flex-col center">
+        <div class="wrapper" id="filter">
+
+        </div>
+    </div>
+</div>
+
+<div class="section content">
+    <div class="row flex-col center">
+        <div class="wrapper" id="content"></div>
+    </div>
+</div>
+
+<div class="section archive">
+    <div class="row flex-col center">
+        <div class="wrapper" id="archive"></div>
+        <a href="/archive/" class="btn">
+            View archive
+        </a>
+    </div>
+</div>
 
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
