--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/header-footer.css">
+    <link rel="stylesheet" href="/css/card.css">
+
     <link rel="stylesheet" href="/home/css/style.css">
 
 
@@ -106,7 +108,7 @@
 
 <div class="section content">
     <div class="row flex-col center">
-        <div class="wrapper" id="content"></div>
+        <div class="wrapper cards" id="content"></div>
     </div>
 </div>
 
