--- a/index.html
+++ b/index.html
@@ -98,14 +98,6 @@
     <div class="overlay"></div>
 </div>
 
-<div class="section filter">
-    <div class="row flex-col center">
-        <div class="wrapper" id="filter">
-
-        </div>
-    </div>
-</div>
-
 <div class="section content">
     <div class="row flex-col center">
         <div class="wrapper cards" id="content"></div>
@@ -113,8 +105,11 @@
 </div>
 
 <div class="section archive">
-    <div class="row flex-col center">
-        <div class="wrapper" id="archive"></div>
+    <div class="row flex-col">
+        <h2>
+            Meer van Always Better
+        </h2>
+        <div class="wrapper cards" id="archive"></div>
         <a href="/archive/" class="btn">
             View archive
         </a>
