--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -2,7 +2,7 @@
     <div class="section footer">
         <div class="row">
             <div class="col">
-                <img class="logo" src="/assets/logo/logo.svg" alt="Always Better Logo">
+                <img class="logo" src="/assets/logo/logo-white.svg" alt="Always Better Logo">
             </div>
             <div class="col">
                 <h5>
@@ -10,7 +10,9 @@
                 </h5>
                 <p class="contact-info">
                     Stapelplein 70/3
+                    <br>
                     9000 Gent
+                    <br>
                     BE 0775.474.715
                 </p>
                 <a href="mailto:support@alwaysbetter.be">
@@ -30,10 +32,10 @@
             <p>
                 © Copyright Always Better 2023
             </p>
-            <a href="" target="_blank">
+            <a href="/legal/privacy-policy/" target="_blank">
                 Privacy Policy
             </a>
-            <a href="" target="_blank">
+            <a href="/legal/algemene-voorwaarden/" target="_blank">
                 Algemene voorwaarden
             </a>
         </div>
