--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="container">
                 <a class="nav-logo" href="/">
-                    <img class="logo" src="/assets/logo/logo.svg" alt="Always Better Logo">
+                    <img class="logo" src="/assets/logo/logo-white.svg" alt="Always Better Logo">
                 </a>
                 <nav>
                     <a class="nav" href="#daypacks">
@@ -55,7 +55,7 @@
         <div class="topnav-content-sm">
             <div class="header-col">
                 <a href="/">
-                    <img class="logo" src="/assets/logo/logo.svg" alt="Always Better Logo">
+                    <img class="logo" src="/assets/logo/logo-white.svg" alt="Always Better Logo">
                 </a>
             </div>
             <div class="header-col">
@@ -116,6 +116,49 @@
     </div>
 </div>
 
+<footer>
+    <div class="section footer">
+        <div class="row">
+            <div class="col">
+                <img class="logo" src="/assets/logo/logo-white.svg" alt="Always Better Logo">
+            </div>
+            <div class="col">
+                <h5>
+                    Contact
+                </h5>
+                <p class="contact-info">
+                    Stapelplein 70/3
+                    <br>
+                    9000 Gent
+                    <br>
+                    BE 0775.474.715
+                </p>
+                <a href="mailto:support@alwaysbetter.be">
+                    support@alwaysbetter.be
+                </a>
+                <div class="socials">
+                    <a href="">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row flex-col align-start disclaimer">
+            <p>
+                © Copyright Always Better 2023
+            </p>
+            <a href="/legal/privacy-policy/" target="_blank">
+                Privacy Policy
+            </a>
+            <a href="/legal/algemene-voorwaarden/" target="_blank">
+                Algemene voorwaarden
+            </a>
+        </div>
+    </div>
+</footer>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="/js/app.js"></script>
