--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -2,7 +2,7 @@
     <div class="section footer">
         <div class="row">
             <div class="col">
-                <img class="logo" src="/assets/logo/logo-white.svg" alt="Always Better Logo">
+                <img class="logo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
             </div>
             <div class="col">
                 <h5>
