--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="container">
                 <a class="nav-logo" href="/">
-                    <img class="logo" src="/assets/logo/logo-white.svg" alt="Always Better Logo">
+                    <img class="logo" id="headerLogo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
                 </a>
                 <nav>
                     <a class="nav" href="#daypacks">
@@ -55,7 +55,7 @@
         <div class="topnav-content-sm">
             <div class="header-col">
                 <a href="/">
-                    <img class="logo" src="/assets/logo/logo-white.svg" alt="Always Better Logo">
+                    <img class="logo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
                 </a>
             </div>
             <div class="header-col">
@@ -110,8 +110,8 @@
             Meer van Always Better
         </h2>
         <div class="wrapper cards" id="archive"></div>
-        <a href="/archive/" class="btn">
-            View archive
+        <a href="/posts/" class="btn">
+            View all content
         </a>
     </div>
 </div>
@@ -120,7 +120,7 @@
     <div class="section footer">
         <div class="row">
             <div class="col">
-                <img class="logo" src="/assets/logo/logo-white.svg" alt="Always Better Logo">
+                <img class="logo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
             </div>
             <div class="col">
                 <h5>
