--- a/_templates/header.html
+++ b/_templates/header.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="container">
                 <a class="nav-logo" href="/">
-                    <img class="logo" src="/assets/logo/logo.svg" alt="Always Better Logo">
+                    <img class="logo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
                 </a>
                 <nav>
                     <a class="nav" href="#daypacks">
@@ -25,7 +25,7 @@
         <div class="topnav-content-sm">
             <div class="header-col">
                 <a href="/">
-                    <img class="logo" src="/assets/logo/logo.svg" alt="Always Better Logo">
+                    <img class="logo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
                 </a>
             </div>
             <div class="header-col">
