--- a/_templates/header.html
+++ b/_templates/header.html
@@ -3,21 +3,24 @@
         <div class="row">
             <div class="container">
                 <a class="nav-logo" href="/">
-                    <img class="logo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
+                    <img class="logo" id="headerLogo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
                 </a>
                 <nav>
-                    <a class="nav" href="#daypacks">
-                        Kies je daypacks
+                    <a href="" class="nav">
+                        Brand updates
                     </a>
-                    <a class="nav" href="#meals">
-                        Voedingsbegeleiding
+                    <a href="" class="nav">
+                        Leiderschap 2.0
                     </a>
-                    <a class="nav" href="#faq">
-                        Veelgestelde vragen
+                    <a href="" class="nav">
+                        Welzijn verhogen
+                    </a>
+                    <a href="" class="nav">
+                        Onze mensen
                     </a>
                 </nav>
-                <a href="/contact" class="btn">
-                    Contact
+                <a href="/newsletter/" class="btn">
+                    Abonneer
                 </a>
             </div>
         </div>
@@ -36,17 +39,17 @@
         </div>
         <div class="small-menu-wrapper">
             <div class="small-menu-content">
-                <a class="nav" href="#daypacks">
-                    Kies je daypacks
+                <a href="" class="nav">
+                    Brand updates
                 </a>
-                <a class="nav" href="#meals">
-                    Voedingsbegeleiding
+                <a href="" class="nav">
+                    Leiderschap 2.0
                 </a>
-                <a class="nav" href="#faq">
-                    Veelgestelde vragen
+                <a href="" class="nav">
+                    Welzijn verhogen
                 </a>
-                <a href="/contact" class="btn">
-                    Contact
+                <a href="" class="nav">
+                    Onze mensen
                 </a>
             </div>
         </div>
