--- a/legal/algemene-voorwaarden/index.html
+++ b/legal/algemene-voorwaarden/index.html
@@ -33,18 +33,21 @@
                     <img class="logo" id="headerLogo" src="/assets/logo/always-better-black.png" alt="Always Better Logo">
                 </a>
                 <nav>
-                    <a class="nav" href="#daypacks">
-                        Kies je daypacks
+                    <a href="" class="nav">
+                        Brand updates
                     </a>
-                    <a class="nav" href="#meals">
-                        Voedingsbegeleiding
+                    <a href="" class="nav">
+                        Leiderschap 2.0
                     </a>
-                    <a class="nav" href="#faq">
-                        Veelgestelde vragen
+                    <a href="" class="nav">
+                        Welzijn verhogen
+                    </a>
+                    <a href="" class="nav">
+                        Onze mensen
                     </a>
                 </nav>
-                <a href="/contact" class="btn">
-                    Contact
+                <a href="/newsletter/" class="btn">
+                    Abonneer
                 </a>
             </div>
         </div>
@@ -62,18 +65,18 @@
             </div>
         </div>
         <div class="small-menu-wrapper">
-            <div class="small-menu-content">
-                <a class="nav" href="#daypacks">
-                    Kies je daypacks
+                        <div class="small-menu-content">
+                <a href="" class="nav">
+                    Brand updates
                 </a>
-                <a class="nav" href="#meals">
-                    Voedingsbegeleiding
+                <a href="" class="nav">
+                    Leiderschap 2.0
                 </a>
-                <a class="nav" href="#faq">
-                    Veelgestelde vragen
+                <a href="" class="nav">
+                    Welzijn verhogen
                 </a>
-                <a href="/contact" class="btn">
-                    Contact
+                <a href="" class="nav">
+                    Onze mensen
                 </a>
             </div>
         </div>
