--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-       Ontdek onze media | Always Better
+       Media | Always Better
     </title>
     <meta name="description" content="">
     <meta name="google" value="notranslate">
@@ -14,10 +14,8 @@
 
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/header-footer.css">
-    <link rel="stylesheet" href="/css/card.css">
 
     <link rel="stylesheet" href="/home/css/style.css">
-    <link rel="stylesheet" href="/posts/css/style.css">
 
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -35,7 +33,7 @@
         <div class="row">
             <div class="container">
                 <a class="nav-logo" href="/">
-                    <img class="logo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
+                    <img class="logo" id="headerLogo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
                 </a>
                 <nav>
                     <a href="" class="nav">
@@ -70,7 +68,7 @@
             </div>
         </div>
         <div class="small-menu-wrapper">
-                        <div class="small-menu-content">
+            <div class="small-menu-content">
                 <a href="" class="nav">
                     Brand updates
                 </a>
@@ -85,46 +83,32 @@
                 </a>
             </div>
         </div>
-
     </div>
 </header>
 
 <div class="section banner">
-    <div class="row flex-col align-start">
-        <h1>
-            Alle posts
-        </h1>
-        <p>
-            Dé kennishub die jou als ondernemer
-            <br>
-            helpt fysiek en mentaal optimaal te presteren.
-        </p>
-    </div>
-    <div class="overlay"></div>
-</div>
-
-<div class="section filters">
-    <div class="row flex-col center">
-        <div class="wrapper filter">
-            <select name="media-category" id="media-category">
-                <option disabled selected>Categorie</option>
-                <option value="blog">Blog</option>
-                <option value="podcast">Podcast</option>
-            </select>
-            <select name="media-type" id="media-type">
-                <option disabled selected>Type</option>
-                <option value="business">Business</option>
-                <option value="health">Health</option>
-                <option value="">Science</option>
-            </select>
+    <div class="row">
+        <div class="col">
+            <h1>
+                Abonneer op onze nieuwsbrief
+            </h1>
+            <p>
+                Dé kennishub die jou als ondernemer
+                <br>
+                helpt fysiek en mentaal optimaal te presteren.
+            </p>
+        </div>
+        <div class="col">
+            <div class="form-wrapper">
+                <form action="https://formspree.io/f/mvonldlv" method="post" target="_blank" novalidate="">
+                    <input type="text" value="" name="FNAME" placeholder="Voornaam*" required="">
+                    <input type="email" value="" name="EMAIL" placeholder="Emailadres*" required="">
+                    <input type="submit" value="Abonneer ➔" name="subscribe" class="btn">
+                </form>
+            </div>
         </div>
     </div>
-</div>
-
-<div class="section content">
-    <div class="row flex-col center">
-        <div class="wrapper cards" id="allContent"></div>
-    </div>
+    <div class="overlay"></div>
 </div>
 
 <footer>
@@ -173,7 +157,5 @@
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="/js/app.js"></script>
-    <script src="/js/cards.js"></script>
-    <script src="/posts/js/script.js"></script>
 </body>
 </html>
