--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
                 </a>
                 <nav>
                     <a href="" class="nav">
-                        Brand updates
+                        House
                     </a>
                     <a href="" class="nav">
-                        Leiderschap 2.0
+                        Media
                     </a>
                     <a href="" class="nav">
-                        Welzijn verhogen
+                        Jobs
                     </a>
                     <a href="" class="nav">
-                        Onze mensen
+                        Support
                     </a>
                 </nav>
-                <a href="/newsletter/" class="btn">
-                    Abonneer
+                <a href="/intake/" class="btn">
+                    Gratis intake
                 </a>
             </div>
         </div>
@@ -70,17 +70,20 @@
         </div>
         <div class="small-menu-wrapper">
             <div class="small-menu-content">
-                <a href="" class="nav">
-                    Brand updates
+                <a href="/house" class="nav">
+                    House
                 </a>
-                <a href="" class="nav">
-                    Leiderschap 2.0
+                <a href="/" class="nav">
+                    Media
                 </a>
-                <a href="" class="nav">
-                    Welzijn verhogen
+                <a href="/jobs/" class="nav">
+                    Jobs
                 </a>
-                <a href="" class="nav">
-                    Onze mensen
+                <a href="/support/" class="nav">
+                    Support
+                </a>
+                <a href="/intake/" class="btn">
+                    Gratis intake
                 </a>
             </div>
         </div>
