--- a/index.html
+++ b/index.html
@@ -104,6 +104,28 @@
     <div class="overlay"></div>
 </div>
 
+<div class="section filter">
+    <div class="row flex-col center">
+        <div class="wrapper filters">
+            <a class="filter-btn active" id="all">
+                Alles
+            </a>
+            <a class="filter-btn" id="brand-updates">
+                Brand updates
+            </a>
+            <a class="filter-btn" id="leiderschap">
+                Leiderschap 2.0
+            </a>
+            <a class="filter-btn" id="welzijn-verhogen">
+                Welzijn verhogen
+            </a>
+            <a class="filter-btn" id="onze-mensen">
+                Onze mensen
+            </a>
+        </div>
+    </div>
+</div>
+
 <div class="section content">
     <div class="row flex-col center">
         <div class="wrapper cards" id="content"></div>
