--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </h2>
         <div class="wrapper cards" id="archive"></div>
         <a href="/posts/" class="btn">
-            View all content
+            Bekijk alle
         </a>
     </div>
 </div>
