--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="container">
                 <a class="nav-logo" href="/">
-                    <img class="logo" id="headerLogo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
+                    <img class="logo" id="headerLogo" src="/assets/logo/logo-white.png" alt="Always Better Logo">
                 </a>
                 <nav>
                     <a href="" class="nav">
@@ -58,7 +58,7 @@
         <div class="topnav-content-sm">
             <div class="header-col">
                 <a href="/">
-                    <img class="logo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
+                    <img class="logo" src="/assets/logo/logo-white.png" alt="Always Better Logo">
                 </a>
             </div>
             <div class="header-col">
@@ -118,7 +118,7 @@
     <div class="section footer">
         <div class="row">
             <div class="col">
-                <img class="logo" src="/assets/logo/always-better-white.png" alt="Always Better Logo">
+                <img class="logo" src="/assets/logo/logo-white.png" alt="Always Better Logo">
             </div>
             <div class="col">
                 <h5>
@@ -131,6 +131,9 @@
                     <br>
                     BE 0775.474.715
                 </p>
+                <a href="">
+                    Gratis intake
+                </a>
                 <a href="mailto:support@alwaysbetter.be">
                     support@alwaysbetter.be
                 </a>
