--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
                     <img class="logo" id="headerLogo" src="/assets/logo/logo-white.png" alt="Always Better Logo">
                 </a>
                 <nav>
-                    <a href="" class="nav">
+                    <a href="https://house.blitz-media.io" class="nav">
                         House
                     </a>
-                    <a href="" class="nav">
+                    <a href="https://media.blitz-media.io" class="nav">
                         Media
                     </a>
-                    <a href="" class="nav">
+                    <a href="https://jobs.blitz-media.io" class="nav">
                         Jobs
                     </a>
                     <a href="" class="nav">
                         Support
                     </a>
                 </nav>
-                <a href="/intake/" class="btn">
+                <a href="https://intake.blitz-media.io" class="btn">
                     Gratis intake
                 </a>
             </div>
